--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -14,6 +14,8 @@ tauri-build = { version = "1", features = [] }
 tauri = { version = "1", features = ["shell-open"] }
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
+objc2 = "0.5.2"
+accessibility-sys = "0.1.3"
 core-foundation = "0.9.4"
 core-graphics = "0.23.2"
 anyhow = "1.0.86"
